--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<% @posts.each do |post| %> 
+
+<h3><%= link_to post.title,post %></h3>
+
+<p><%= post.body %></p>
+
+<% end %>
