--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,11 @@
-<% @posts.each do |post| %> 
 
-<h3><%= link_to post.title,post %></h3>
+<% @posts.each do |post| %>
 
-<p><%= post.body %></p>
+<div class="post">
 
+<h3 class = "title"><%= link_to post.title,post %></h3> 
+
+<div class="entry"><h3><%= post.body %></h3> </div>
+</div>
 <% end %>
+
