--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<%= render "partials/header" %>
+<%= render :partial => 'partials/header', :formats => :html %>
 
 <div id="page">
 	<div id="page-bgtop">
@@ -41,7 +41,9 @@
 				<div>
 				-->
 
-				<%= render "partials/sidebar" %>
+				<%= render :partial => 'partials/sidebar', :formats => :html %>
+
+			
 			
 
 			<div>
