--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'partials/header', :formats => :html %>
+ <%= render :partial => '/partials/header.html.erb', :formats => [:html] %>
 
 <div id="page">
 	<div id="page-bgtop">
