--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,10 +36,14 @@ h1,h2,h3 {
 	padding:0
 }
 h1 {
-	font-size:3em
+	font-size:3em;
+	margin-bottom: 0.3em;  
+	line-height: 1em;
 }
 h2 {
 	font-size:2em;
+	margin-bottom: 0.5em;
+	line-height:0.9em; 
 }
 h3 {
 	font-size:1.8em
@@ -84,7 +88,8 @@ a:hover {
 	font-size:2.5em;
 	font-weight:bold;
 	line-height: 1.3em;
-	margin-left: 0.2em;
+	margin-left: 0.5em;
+    margin-top: 0.5em;
 }
 #logo p {
 	border:none;
