--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,7 +5,7 @@
 
 <h3 class = "title"><%= link_to post.title,post %></h3> 
 
-<div class="entry"><h3><%= post.body %></h3> </div>
+<div class="entry"><p><%= post.body %></p> </div>
 </div>
 <% end %>
 
