--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div class="post"><h1>Find Us</h1>
+
+	<h3> Tel: ## </h3>
+	<h3> Mail: example@example.com 
+</div>
+
