--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-
+<div class="post">
 
 
 <h1><%= @post.title %></h1>
@@ -13,3 +13,4 @@
 <%= link_to "Edit Post", edit_post_path %> |
 
 <%= link_to "Delete", @post, :confirm => "Are you sure you want to delete?", :method => :delete %>
+ </div>
