--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -1,423 +1,1 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
-
-
- */
-
-
-
-
-
-
-
-
-
-body {
-	margin:0;
-	padding:0;
-	background:#CFF4FF;
-	font-size:1.6em;
-	color:#000;
-	line-height: 1.6em;
-		
-}
-strong {
-	color:#fff
-}
-h1,h2,h3 {
-	margin:0;
-	padding:0
-}
-h1 {
-	font-size:3em
-}
-h2 {
-	font-size:2em;
-}
-h3 {
-	font-size:1.8em
-}
-p,ul,li {
-	margin-top:0;
-	line-height: 1.2em;
-}
-a {
-	text-decoration:none;
-	color:#000
-}
-a:hover {
-	text-decoration:none;
-	color:#CFF4FF
-}
-#wrapper {
-	margin:0 auto;
-	padding:3em;
-	background:#000;
-}
-#header-wrapper {
-	height:5em;
-}
-#header {
-	margin:0em auto;
-	padding:0px 0px 0px 0px
-}
-#logo {
-	float:left;
-	width:260px;
-	margin:-2em;
-	padding:0em;
-	margin-top:-3em
-}
-#logo h1 a {
-	color:#CFF4FF
-}
-#logo h1 {
-	padding:10px 20px 10px 0px;
-	text-transform:uppercase;
-	font-size:2.5em;
-	font-weight:bold;
-	line-height: 1.3em;
-	margin-left: 0.2em;
-}
-#logo p {
-	border:none;
-}
-#logo a {
-	text-decoration:none;
-	border:none;
-	background:none;
-	padding:20px 0px 20px 20px;
-}
-#search input[type="text"] {
-	width:120px
-}
-.main-nav {
-	position:absolute;
-	float:right;
-	height:3em;
-	margin:0px auto;
-	padding:0em;
-	margin-left:14em
-}
-.main-nav ul {
-	padding:0px 0px 0px;
-	list-style:none
-}
-.main-nav li {
-	float:left;
-	padding:0.1em;
-	list-style-type:none
-}
-.main-nav a {
-	position:relative;
-	display:block;
-	padding:1em;
-	text-transform:uppercase;
-	font-size:1.1em;
-	text-decoration:none;
-	margin-top:0em;
-	background-color:#CFF4FF
-}
-@media (max-width: 80em) and (min-width: 60em) {
-	body {
-		background-color:yellow
-	}
-	.post {
-		width:80%;
-		float:right;
-		right: 5%;
-		margin-left: 1em;
-	}
-
-	#sidebar {
-		max-width:22%;
-		margin-top: 2em;
-		 }
-		
-		#page {
-			float: right;
-			max-width: 60%; 
-			
-		}
-		
-	}
-	.main-nav {
-		font-size:0.79em
-	}
-@media only screen and (min-width: 80em) {
-	body {
-		background-color:lightblue
-	}
-	.post {
-		width: 98%;
-		float:right;
-		right: 9%;
-		margin-left: 1em;
-	}
-
-	.main-nav {
-		display:flex;
-		margin-left:9em;
-		font-size:1.2em;
-		padding:0.2em
-	}
-	
-	#page {
-		float:right;
-		max-width: 60%; 
-	}
-}
-
-
-@media only screen and (max-width: 30em) {
-		.main-nav {
-					position:relative;
-		margin-bottom:0em;
-		padding:0em;
-		margin-left:-1em
-	}
-	
-	#header-wrapper {
-		height: 10em;
-		
-	}
-
-	.main-nav a {
-		position:relative;
-		display:flex;
-		padding:0.5em;
-		text-transform:uppercase;
-		font-size:0.8em;
-		text-decoration:none;
-		margin-top:1.7em;
-		background-color:#CFF4FF
-	}
-	.main-nav li {
-		padding:.1em;
-		list-style-type:none
-	}
-
-	.post {
-		width: 60%;
-		margin-left: 0.5em;
-		float: right;
-		right: 9%
-	}	
-	#sidebar {
-		max-width:45%; 
-	}
-	
-	#sidebar a {
-	font-size: 0.8em;
-	text-align:center;
-	
-	padding:0.3em;
-
-}
-	#sidebar h2{
-		font-size: 1em;
-	}
-
-}
-
-@media (max-width: 60em) and (min-width: 30em) {
-
-	body {
-		background-color:lightblue
-	}
-	.main-nav {
-		position:relative;
-		margin-bottom:0em;
-		padding:0em;
-		margin-left:-1em
-	}
-	.main-nav a {
-		position:relative;
-		display:flex;
-		padding:0.6em;
-		text-transform:uppercase;
-		font-size:0.9em;
-		text-decoration:none;
-		margin-top:1.7em;
-		background-color:#CFF4FF
-			
-	}
-	.main-nav li {
-		padding:.1em;
-		list-style-type:none
-	}
-
-	#logo h1 {
-		padding:.4em 1em 0em 0em
-	}
-	.post {
-		width: 65%;
-		float: right;
-		left: -15%;
-		margin-left:2em;
-	}
-	#content {
-		display:block;
-	}
-	#header-wrapper {
-		height:6em
-	}
-}
-.post,.post_full,.page {
-	margin-bottom:2em;
-	padding:30px 20px 20px 20px;
-	box-shadow:inset 0px 0px 1px 1px black;
-	outline:2px groove black;
-	outline-offset:-5px;
-	background-color:#FFFFE0
-}
-.main-nav a:hover,.main-nav.current_page_item a {
-	background:black;
-	border:3px double white;
-	text-decoration:none
-}
-#page-bgtop {
-	padding:20px 0px;
-}
-.post,.post_full,.page {
-	position:relative;
-	margin-bottom:1em;
-	padding:1em 1em 2em 1em;
-	box-shadow:inset 0px 0px 1px 1px black;
-	outline:2px groove black;
-	outline-offset:-5px;
-	background-color:#FFFFE0;
-	display: inline;
-}
-.post .title a,.page .title a {
-	text-decoration:underline;
-}
-.post.title,.page.title {
-	height:41px;
-	padding:0px 0px 0px 0px;
-	letter-spacing:-1px
-}
-.post.entry {
-	padding:20px 30px 20px 30px;
-	padding-bottom:20px;
-	text-align:center
-}
-.post.byline {
-	clear:both;
-	overflow:hidden;
-	padding-bottom:20px
-}
-.post.meta {
-	float:left
-}
-.post.links {
-	float:right
-}
-.post_full .byline p {
-	padding:0;
-	margin:0
-}
-.post_full .byline {
-	clear:both;
-	overflow:hidden;
-	margin-bottom:15px;
-	padding:5px;
-	background:black
-}
-#search form li {
-	list-style-type:none;
-	text-decoration:none
-}
-input#search-text li {
-	list-style-type:none
-}
-#sidebar {
-	width:10em;
-	margin-left:2.5em;
-	padding:1em 1em 1em 1em;
-	background-color:black;
-	outline:2px solid #FFFFE0;
-	float:left;
-	margin-top:2em;
-}
-#sidebar ul {
-	margin:0;
-	padding:0;
-	padding-bottom:20px
-}
-#sidebar li {
-	margin:1px;
-	padding:0em;
-	padding-bottom:30px;
-	list-style-type:none;
-	text-align:center
-}
-#sidebar li li {
-	line-height:35px;
-	margin:0px;
-	border-left:none;
-	text-align:left
-}
-#sidebar li li span {
-	display:block;
-	margin-top:-20px;
-	padding:0;
-	font-size:11px;
-	font-style:italic
-}
-#sidebar li li a {
-	padding:0px 0px 0px 15px
-}
-#sidebar h2 {
-	height:60px;
-	margin:0px 0px 20px 0px;
-	padding:10px 0px 10px 0px;
-	text-align:center;
-	color:#fff
-}
-#sidebar p {
-	margin:0px;
-	padding:0px 20px 20px 20px;
-	text-align:justify
-}
-#sidebar a {
-	text-align:center;
-	padding:0.3em;
-	color: white;
-}
-#sidebar a:hover {
-	text-decoration:none;
-	color:#CFF4FF;
-	background-color:black;
-	outline:3px double #fff
-}
-#content {
-	padding: 0em 3em 2em 1em;
-}
-#footer {
-	margin-top:1px;
-	width:100%;
-	background-color:#000
-}
-#footer p {
-	margin:0;
-	line-height:normal;
-	font-size:1.2rem;
-	color:white;
-	padding:10px 10px 10px 10px;
-	text-align:center;
-	background-color:#000
-}
-#footer a {
-	color:#fff
-}
-
-
+body{margin:0;padding:0;background:#CFF4FF;font-size:1.6em;color:#000;line-height:1.6em}strong{color:#fff}h1,h2,h3{margin:0;padding:0}h1{font-size:3em;margin-bottom:0.3em;line-height:1em}h2{font-size:2em;margin-bottom:0.5em;line-height:0.9em}h3{font-size:1.8em}p,ul,li{margin-top:0;line-height:1.2em}a{text-decoration:none;color:#000}a:hover{text-decoration:none;color:#CFF4FF}#wrapper{margin:0 auto;padding:3em;background:#000}#header-wrapper{height:5em}#header{margin:0em auto;padding:0px 0px 0px 0px}#logo{float:left;width:260px;margin:-2em;padding:0em;margin-top:-3em}#logo h1 a{color:#CFF4FF}#logo h1{padding:10px 20px 10px 0px;text-transform:uppercase;font-size:2.5em;font-weight:bold;line-height:1.3em;margin-left:0.5em;margin-top:0.5em}#logo p{border:none}#logo a{text-decoration:none;border:none;background:none;padding:20px 0px 20px 20px}#search input[type="text"]{width:120px}.main-nav{position:absolute;float:right;height:3em;margin:0px auto;padding:0em;margin-left:14em}.main-nav ul{padding:0px 0px 0px;list-style:none}.main-nav li{float:left;padding:0.1em;list-style-type:none}.main-nav a{position:relative;display:block;padding:1em;text-transform:uppercase;font-size:1.1em;text-decoration:none;margin-top:0em;background-color:#CFF4FF}@media (max-width: 80em) and (min-width: 60em){body{background-color:#ff0}.post{width:80%;float:right;right:5%;margin-left:1em}#sidebar{max-width:22%;margin-top:2em}#page{float:right;max-width:60%}}.main-nav{font-size:0.79em}@media only screen and (min-width: 80em){body{background-color:#add8e6}.post{width:98%;float:right;right:9%;margin-left:1em}.main-nav{display:flex;margin-left:9em;font-size:1.2em;padding:0.2em}#page{float:right;max-width:60%}}@media only screen and (max-width: 30em){.main-nav{position:relative;margin-bottom:0em;padding:0em;margin-left:-1em}#header-wrapper{height:10em}.main-nav a{position:relative;display:flex;padding:0.5em;text-transform:uppercase;font-size:0.8em;text-decoration:none;margin-top:1.7em;background-color:#CFF4FF}.main-nav li{padding:.1em;list-style-type:none}.post{width:60%;margin-left:0.5em;float:right;right:9%}#sidebar{max-width:45%}#sidebar a{font-size:0.8em;text-align:center;padding:0.3em}#sidebar h2{font-size:1em}}@media (max-width: 60em) and (min-width: 30em){body{background-color:#add8e6}.main-nav{position:relative;margin-bottom:0em;padding:0em;margin-left:-1em}.main-nav a{position:relative;display:flex;padding:0.6em;text-transform:uppercase;font-size:0.9em;text-decoration:none;margin-top:1.7em;background-color:#CFF4FF}.main-nav li{padding:.1em;list-style-type:none}#logo h1{padding:0.4em 1em 0em 0em}.post{width:65%;float:right;left:-15%;margin-left:2em}#content{display:block}#header-wrapper{height:6em}}.post,.post_full,.page{margin-bottom:2em;padding:30px 20px 20px 20px;box-shadow:inset 0px 0px 1px 1px black;outline:2px groove black;outline-offset:-5px;background-color:#FFFFE0}.main-nav a:hover,.main-nav.current_page_item a{background:black;border:3px double white;text-decoration:none}#page-bgtop{padding:20px 0px}.post,.post_full,.page{position:relative;margin-bottom:1em;padding:1em 1em 2em 1em;box-shadow:inset 0px 0px 1px 1px black;outline:2px groove black;outline-offset:-5px;background-color:#FFFFE0;display:inline}.post .title a,.page .title a{text-decoration:underline}.post.title,.page.title{height:41px;padding:0px 0px 0px 0px;letter-spacing:-1px}.post.entry{padding:20px 30px 20px 30px;padding-bottom:20px;text-align:center}.post.byline{clear:both;overflow:hidden;padding-bottom:20px}.post.meta{float:left}.post.links{float:right}.post_full .byline p{padding:0;margin:0}.post_full .byline{clear:both;overflow:hidden;margin-bottom:15px;padding:5px;background:#000}#search form li{list-style-type:none;text-decoration:none}input#search-text li{list-style-type:none}#sidebar{width:10em;margin-left:2.5em;padding:1em 1em 1em 1em;background-color:black;outline:2px solid #FFFFE0;float:left;margin-top:2em}#sidebar ul{margin:0;padding:0;padding-bottom:20px}#sidebar li{margin:1px;padding:0em;padding-bottom:30px;list-style-type:none;text-align:center}#sidebar li li{line-height:35px;margin:0px;border-left:none;text-align:left}#sidebar li li span{display:block;margin-top:-20px;padding:0;font-size:11px;font-style:italic}#sidebar li li a{padding:0px 0px 0px 15px}#sidebar h2{height:60px;margin:0px 0px 20px 0px;padding:10px 0px 10px 0px;text-align:center;color:#fff}#sidebar p{margin:0px;padding:0px 20px 20px 20px;text-align:justify}#sidebar a{text-align:center;padding:0.3em;color:white}#sidebar a:hover{text-decoration:none;color:#CFF4FF;background-color:black;outline:3px double #fff}#content{padding:0em 3em 2em 1em}#footer{margin-top:1px;width:100%;background-color:#000}#footer p{margin:0;line-height:normal;font-size:1.2rem;color:white;padding:10px 10px 10px 10px;text-align:center;background-color:#000}#footer a{color:#fff}
